--- a/finalProject/html/solution.html
+++ b/finalProject/html/solution.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title>TITLE</title>
+	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
+	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
 <body>
+	<header>
+		<input type="checkbox" id="nav-toggle" class="nav-toggle">
+		<label for="nav-toggle" class="nav-toggle-label">
+				<span></span>
+		</label>
+		<nav class="navbar">
+			<ul>
+				<li><a href="home.html">Home</a></li>
+				<li><a href="problem.html">Problem</a></li>
+				<li class="active"><a href="solution.html">Solution</a></li>
+				<li><a href="sources.html">Sources</a></li>
+			</ul>
+		</nav>
+	</header>
 	<h1>Solution page..</h1>
 
 </body>
