--- a/finalProject/html/home.html
+++ b/finalProject/html/home.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<input type="checkbox" id="nav-toggle" class="nav-toggle">
+		<label for="nav-toggle" class="nav-toggle-label">
+				<span></span>
+		</label>
+		<nav class="navbar">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li class="active"><a href="#">Home</a></li>
 				<li><a href="problem.html">Problem</a></li>
 				<li><a href="solution.html">Solution</a></li>
 				<li><a href="sources.html">Sources</a></li>
@@ -18,14 +22,14 @@
 	</header>
 
 	<div class="home-text">
-		<h1>Header goes here..</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h1 tabindex="0">Loren ipsum dolor..</h1>
+		<p tabindex="0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 
 	<div class="slideshow-box">
-		<img src="https://source.unsplash.com/random">
-		<img src="https://source.unsplash.com/random">
-		<img src="https://source.unsplash.com/random">
+		<img src="https://source.unsplash.com/random" tabindex="0">
+		<img src="https://source.unsplash.com/random" tabindex="0">
+		<img src="https://source.unsplash.com/random" tabindex="0">
 
 	</div>
 
