--- a/finalProject/html/problem.html
+++ b/finalProject/html/problem.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>TITLE</title>
-	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
+	<link rel="stylesheet" type="text/css" href="../css/problemstyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
 <body>
@@ -20,7 +20,20 @@
 			</ul>
 		</nav>
 	</header>
-	<h1>Problem page...</h1>
+	
+
+	<article>
+		<h1>Problem page...</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+
+		<div class="image-container">
+			<img src="https://source.unsplash.com/random" tabindex="0">
+			<img src="https://source.unsplash.com/random" tabindex="0">
+			<img src="https://source.unsplash.com/random" tabindex="0">
+		</div>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+	</article>
 
 </body>
 </html>
