--- a/finalProject/html/home.html
+++ b/finalProject/html/home.html
@@ -13,7 +13,7 @@
 		</label>
 		<nav class="navbar">
 			<ul>
-				<li class="active"><a href="#">Home2</a></li>
+				<li class="active"><a href="#">Home</a></li>
 				<li><a href="problem.html">Problem</a></li>
 				<li><a href="solution.html">Solution</a></li>
 				<li><a href="sources.html">Sources</a></li>
