--- a/finalProject/html/sources.html
+++ b/finalProject/html/sources.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>TITLE</title>
 	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
