changed page title and alt text on photo
title: home page
title: problem page
title: solution page
title: sources page
alt: example photo

--- a/finalProject/html/home.html
+++ b/finalProject/html/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TITLE</title>
+	<title>Home page</title>
 	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
@@ -28,9 +28,9 @@
 	</div>
 
 	<div class="slideshow-box">
-		<img src="https://source.unsplash.com/random" tabindex="0">
-		<img src="https://source.unsplash.com/random" tabindex="0">
-		<img src="https://source.unsplash.com/random" tabindex="0">
+		<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
+		<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
+		<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
 
 	</div>
 
