--- a/finalProject/html/problem.html
+++ b/finalProject/html/problem.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TITLE</title>
+	<title>Problem page</title>
 	<link rel="stylesheet" type="text/css" href="../css/problemstyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
@@ -28,9 +28,9 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
 
 		<div class="image-container">
-			<img src="https://source.unsplash.com/random" tabindex="0">
-			<img src="https://source.unsplash.com/random" tabindex="0">
-			<img src="https://source.unsplash.com/random" tabindex="0">
+			<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
+			<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
+			<img src="https://source.unsplash.com/random" alt="example photo" tabindex="0">
 		</div>
 
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
