--- a/finalProject/html/solution.html
+++ b/finalProject/html/solution.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TITLE</title>
+	<title>Solution page</title>
 	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
