--- a/finalProject/html/problem.html
+++ b/finalProject/html/problem.html
@@ -9,8 +9,10 @@
 <body>
 	<header>
 		<input type="checkbox" id="nav-toggle" class="nav-toggle">
-		<label for="nav-toggle" class="nav-toggle-label">
-				<span></span>
+		<label for="nav-toggle" class="nav-toggle-label">Menu
+			<div class="bar"></div>
+			<div class="bar"></div>
+			<div class="bar"></div>
 		</label>
 		<nav class="navbar">
 			<ul>
