--- a/finalProject/html/problem.html
+++ b/finalProject/html/problem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>Problem page</title>
 	<link rel="stylesheet" type="text/css" href="../css/problemstyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
