--- a/finalProject/html/sources.html
+++ b/finalProject/html/sources.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sources page</title>
-	<link rel="stylesheet" type="text/css" href="../css/homestyle.css">
+	<link rel="stylesheet" type="text/css" href="../css/sourcesstyle.css">
 	<link rel="stylesheet" type="text/css" href="../css/navstyle.css">
 </head>
 <body>
