img animation home page

--- a/finalProject/html/home.html
+++ b/finalProject/html/home.html
@@ -30,9 +30,9 @@
 	</div>
 
 	<div class="slideshow-box">
-		<img src="https://source.unsplash.com/random" alt="example photo 1" tabindex="0">
-		<img src="https://source.unsplash.com/random" alt="example photo 2" tabindex="0">
-		<img src="https://source.unsplash.com/random" alt="example photo 3" tabindex="0">
+		<img src="../images/img1.jpg" class="first" alt="example photo 1" tabindex="0">
+		<img src="../images/img2.jpg" class="second" alt="example photo 2" tabindex="0">
+		<img src="../images/img3.jpg" class="third" alt="example photo 3" tabindex="0">
 
 	</div>
 
